--- a/.github/workflows/build_branded_main.yml
+++ b/.github/workflows/build_branded_main.yml
@@ -7,6 +7,14 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      upload_ios_to_testflight:
+        description: "Upload the iOS build to Testflight"
+        type: boolean
+
+      upload_tvos_to_testflight:
+        description: "Upload the tvOS build to Testflight"
+        type: boolean
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -31,21 +39,6 @@ jobs:
         id: set-macos-runner
         run: |
           echo "runner-label=${{ vars.PREFERRED_MACOS_RUNNER || 'macos-latest' }}" >> $GITHUB_OUTPUT
-
-  checkout_owntube:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout another repository
-        uses: actions/checkout@v4
-        with:
-          repository: OwnTube-tv/web-client
-          path: owntube
-
-      - name: Upload repository artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: owntube-base-code
-          path: owntube
 
   build_info:
     runs-on: ubuntu-latest
@@ -108,79 +101,93 @@ jobs:
           printf "%s\n" $(cat "./.customizations") >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
 
-#  deploy_web:
-#    needs: [build_info, customizations_setup]
-#    uses: ./owntube/.github/workflows/deploy_web.yml
-#    with:
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#
-#  build_android_apk:
-#    needs: [build_info, customizations_setup]
-#    uses: ./.github/workflows/build_android_apk.yml
-#    with:
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#
-#  build_android_tv_apk:
-#    needs: [build_info, customizations_setup]
-#    uses: ./.github/workflows/build_android_tv_apk.yml
-#    with:
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#
-#  testflight_ios:
-#    if: ${{ github.event.inputs.upload_ios_to_testflight == 'true' }}
-#    needs: [build_info, customizations_setup, choose_macos_runner]
-#    uses: ./.github/workflows/testflight.yml
-#    secrets:
-#      BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_BUILD_CERTIFICATE_BASE64 }}
-#      PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_BUILD_PROVISION_PROFILE_BASE64 }}
-#      P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD}}
-#      PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.IOS_PROVISIONING_PROFILE_SPECIFIER }}
-#      APPLE_DEVELOPMENT_TEAM: ${{ secrets.APPLE_DEVELOPMENT_TEAM }}
-#      APPLE_API_PRIVATE_KEY: ${{ secrets.APPLE_API_PRIVATE_KEY }}
-#      APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
-#      APPLE_API_KEY_ISSUER: ${{ secrets.APPLE_API_KEY_ISSUER }}
-#    with:
-#      target: iphoneos
-#      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#      code_sign_identity: iPhone Distribution
-#
-#  testflight_tvos:
-#    if: ${{ github.event.inputs.upload_tvos_to_testflight == 'true' }}
-#    needs: [build_info, customizations_setup, choose_macos_runner]
-#    uses: ./.github/workflows/testflight.yml
-#    secrets:
-#      BUILD_CERTIFICATE_BASE64: ${{ secrets.TVOS_BUILD_CERTIFICATE_BASE64 }}
-#      PROVISIONING_PROFILE_BASE64: ${{ secrets.TVOS_BUILD_PROVISION_PROFILE_BASE64 }}
-#      P12_PASSWORD: ${{ secrets.TVOS_P12_PASSWORD}}
-#      PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.TVOS_PROVISIONING_PROFILE_SPECIFIER }}
-#      APPLE_DEVELOPMENT_TEAM: ${{ secrets.APPLE_DEVELOPMENT_TEAM }}
-#      APPLE_API_PRIVATE_KEY: ${{ secrets.APPLE_API_PRIVATE_KEY }}
-#      APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
-#      APPLE_API_KEY_ISSUER: ${{ secrets.APPLE_API_KEY_ISSUER }}
-#    with:
-#      target: appletvos
-#      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#      code_sign_identity: Apple Distribution
-#
-#  build_ios_simulator_app:
-#    needs: [build_info, customizations_setup, choose_macos_runner]
-#    uses: ./.github/workflows/build_ios_simulator_app.yml
-#    with:
-#      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
-#
-#  build_tvos_simulator_app:
-#    needs: [build_info, customizations_setup, choose_macos_runner]
-#    uses: ./.github/workflows/build_tvos_simulator_app.yml
-#    with:
-#      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
-#      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
-#      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+  deploy_web:
+    needs: [build_info, customizations_setup]
+    uses: OwnTube-tv/web-client/.github/workflows/deploy_web.yml@main
+    with:
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  build_android_apk:
+    needs: [build_info, customizations_setup]
+    uses: OwnTube-tv/web-client/.github/workflows/build_android_apk.yml@main
+    with:
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  build_android_tv_apk:
+    needs: [build_info, customizations_setup]
+    uses: OwnTube-tv/web-client/.github/workflows/build_android_tv_apk.yml@main
+    with:
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  testflight_ios:
+    if: ${{ github.event.inputs.upload_ios_to_testflight == 'true' }}
+    needs: [build_info, customizations_setup, choose_macos_runner]
+    uses: OwnTube-tv/web-client/.github/workflows/testflight.yml@main
+    secrets:
+      BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_BUILD_CERTIFICATE_BASE64 }}
+      PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_BUILD_PROVISION_PROFILE_BASE64 }}
+      P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD}}
+      PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.IOS_PROVISIONING_PROFILE_SPECIFIER }}
+      APPLE_DEVELOPMENT_TEAM: ${{ secrets.APPLE_DEVELOPMENT_TEAM }}
+      APPLE_API_PRIVATE_KEY: ${{ secrets.APPLE_API_PRIVATE_KEY }}
+      APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
+      APPLE_API_KEY_ISSUER: ${{ secrets.APPLE_API_KEY_ISSUER }}
+    with:
+      target: iphoneos
+      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      code_sign_identity: iPhone Distribution
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  testflight_tvos:
+    if: ${{ github.event.inputs.upload_tvos_to_testflight == 'true' }}
+    needs: [build_info, customizations_setup, choose_macos_runner]
+    uses: OwnTube-tv/web-client/.github/workflows/testflight.yml@main
+    secrets:
+      BUILD_CERTIFICATE_BASE64: ${{ secrets.TVOS_BUILD_CERTIFICATE_BASE64 }}
+      PROVISIONING_PROFILE_BASE64: ${{ secrets.TVOS_BUILD_PROVISION_PROFILE_BASE64 }}
+      P12_PASSWORD: ${{ secrets.TVOS_P12_PASSWORD}}
+      PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.TVOS_PROVISIONING_PROFILE_SPECIFIER }}
+      APPLE_DEVELOPMENT_TEAM: ${{ secrets.APPLE_DEVELOPMENT_TEAM }}
+      APPLE_API_PRIVATE_KEY: ${{ secrets.APPLE_API_PRIVATE_KEY }}
+      APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
+      APPLE_API_KEY_ISSUER: ${{ secrets.APPLE_API_KEY_ISSUER }}
+    with:
+      target: appletvos
+      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      code_sign_identity: Apple Distribution
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  build_ios_simulator_app:
+    needs: [build_info, customizations_setup, choose_macos_runner]
+    uses: OwnTube-tv/web-client/.github/workflows/build_ios_simulator_app.yml@main
+    with:
+      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
+
+  build_tvos_simulator_app:
+    needs: [build_info, customizations_setup, choose_macos_runner]
+    uses: OwnTube-tv/web-client/.github/workflows/build_tvos_simulator_app.yml@main
+    with:
+      runner-label: ${{ needs.choose_macos_runner.outputs.runner-label }}
+      customizations_env_content: ${{ needs.customizations_setup.outputs.CUSTOMIZATIONS_ENV_CONTENT }}
+      build_info: ${{ needs.build_info.outputs.BUILD_INFO }}
+      owntube_source: OwnTube-tv/web-client
+      use_parent_repo_customizations: true
